# self-adaptive-llm

./: .gitignore  README.md  logging_utils.py  lora_vmlu.ipynb  optim_modules.py  requirements.txt  rewrite_svd_training_process.py  svd_reinforce_hydra.py  utils.py
base_model/: __init__.py  base.py  llama3instruct.py  mistral03instruct.py
cfgs/: config.yaml
cfgs/base_model/: llama3i8b.yaml  mistral03i7b.yaml
cfgs/mode/: eval.yaml
cfgs/optimization/: cem.yaml  reinforce.yaml  rsm.yaml
cfgs/policy/: default.yaml  wcomb.yaml
cfgs/task/: ai2_arc.yaml  cls.yaml  few_shot_arc_challenge.yaml  few_shot_humaneval.yaml  few_shot_math.yaml  gsm8k.yaml  math.yaml  mbpp2.yaml
cfgs/task/ablation_tasks/: few_shot_arc_challenge_20.yaml  few_shot_arc_challenge_3.yaml  few_shot_arc_challenge_5.yaml
evaluation/fishfarm/: pyproject.toml  tox.ini
evaluation/fishfarm/fishfarm/: __init__.py  chat_templates.py  imports.py  logging.py  version.py
evaluation/fishfarm/fishfarm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
evaluation/fishfarm/fishfarm/models/: __init__.py  base.py  tokenization_utils.py  vllm_model.py
evaluation/fishfarm/fishfarm/tasks/: __init__.py  ai2_arc.py  base.py  competation_math.py  language_restricted_math.py
evaluation/fishfarm/fishfarm/tasks/evalplus/: __init__.py  data.py  evaluation.py  generation.py  sanitization.py  task.py
policy/: __init__.py  base.py  weighted_combination.py
scripts/: eval_few_shot.sh  eval_prompt_based.sh  train_task_expert.sh
submission/: Meta-Llama-3-8B-Instruct-VMLU-LoRA.csv  Meta-Llama-3-8B-Instruct-VMLU-Self-Adaptive.csv  Meta-Llama-3-8B-Instruct.csv
tasks/: __init__.py  arc.py  base.py  cls.py  gsm8k.py  math.py  mbpp2.py
